# ccc

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: 01-core-features.md  02-project-setup.md  03-agent-loop.md  04-tool-system.md  05-builtin-tools.md  06-permission-system.md  07-memory-system.md
src/: agent.cpp  agent.hpp  api_client.cpp  api_client.hpp  context_manager.cpp  context_manager.hpp  main.cpp  memory.cpp  memory.hpp  permission.cpp  permission.hpp  skill_manager.cpp  skill_manager.hpp  task_manager.cpp  task_manager.hpp  tool.hpp  ui.cpp  ui.hpp
src/tools/: bash_tool.cpp  bash_tool.hpp  edit_tool.cpp  edit_tool.hpp  glob_tool.cpp  glob_tool.hpp  grep_tool.cpp  grep_tool.hpp  read_tool.cpp  read_tool.hpp  task_create_tool.hpp  task_list_tool.hpp  task_update_tool.hpp  write_tool.cpp  write_tool.hpp
tests/: CMakeLists.txt  test_context_manager.cpp  test_edit_tool.cpp  test_glob_tool.cpp  test_grep_tool.cpp  test_memory.cpp  test_skill_manager.cpp  test_task_manager.cpp
